# nbs-test

./: %F  .gitignore  DEPLOYMENT_CHECKLIST.md  Login.py  NanoBio_Live_Data_Report.docx  NanoBio_Studio_Investor_Government_Brief.md  NanoBio_Studio_Presentation_Slides_ML_and_Data.docx  NanoBio_Studio_SIMPLIFIED_Report.docx  NanoBio_Studio_Scientific_Features.docx  NanoBio_Studio_Strategic_Partner_Presentation.docx  PARAMETERS_QUICK_START.md  PROFESSIONAL_REPORT_QUICKSTART.md  PROFESSIONAL_REPORT_QUICK_REFERENCE.md  PROFESSIONAL_REPORT_UPGRADE_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  SCIENTIFIC_PARAMETERS_ANALYSIS.md  SETUP.md  SITEMAP.html  SITEMAP.md  SITEMAP_LATEST.docx  SPRINT3_PDF_INTEGRATION_COMPLETE.md  audit_dashboard.py  auth.py  check_training_records.py  clear_all_trials_complete.py  comprehensive_lnp_dataset.csv  create_user.py  data_downloader.py  design_history.py  fix_database_schema.py  generate_data_availability_report.py  generate_dataset_report.py  generate_datasets_pdf.py  generate_lnp_simple.py  generate_scientific_features_doc.py  generate_simplified_report.py  generate_sitemap_pdf.py  generate_sitemap_word.py  live_data_orchestrator.py  models.py  (+20 more)
ai_engine/: API_REFERENCE.md  QUICK_START.md  __init__.py  audit.py  explainability.py  pareto.py  reporting.py  schema.py  toxicity.py
biotech-lab-main/: AUTHENTICATION.md  BRANDING_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  EXTERNAL_DATA_INTEGRATION_README.md  INDEX.md  LAUNCH.md  LICENSE.md  LNP_DATA_SOURCES.md  NanoBio_Studio_Dataset_Sources_Report.docx  NanoBio_Studio_Simple_Explanation.md  PROFESSIONAL_REPORT_VISUAL_GUIDE.md  PROJECT_SUMMARY.md  README.md  TESTING.md  TRAINING_HISTORY_TAB_CORRECTED.py  app.py  audit_dashboard.py  check_admin.py  check_dataset_volume.py  design_persistence.py  export.py  generate_lnp_dataset.py  hybrid_toxcast_connector.py  rbac.py  reset_password.py  sessions.json  show_all_models.py  start.bat  streamlit_auth.py  update_dataset_report.py  user_safety.py  users.json
nanobio_studio_backend/: .env.example  PHASE2_ML_IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
nanobio_studio_backend/alembic/: __init__.py
nanobio_studio_backend/nanobio_studio/app/api/routes/: health.py  ml.py  query.py
nanobio_studio_backend/nanobio_studio/app/core/: logging.py
nanobio_studio_backend/nanobio_studio/app/db/: base.py  session.py
nanobio_studio_backend/nanobio_studio/app/ingestion/: csv_importer.py
nanobio_studio_backend/nanobio_studio/app/ml/: dataframe_builder.py  exporters.py  trainer.py
nanobio_studio_backend/nanobio_studio/app/qc/: validators.py
nanobio_studio_backend/nanobio_studio/app/schemas/: formulations.py  payloads.py
nanobio_studio_backend/tests/: conftest.py  test_schemas.py
tabs/: design.py  (+2 more)
(+216 files in other folders)
