[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobio-studio-backend"
version = "0.1.0"
description = "NanoBio Studio™ - Production-ready backend for AI nanomedicine platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary - Experts Group FZE"}
authors = [
    {name = "Experts Group FZE", email = "info@expertsgroup.me"}
]
keywords = [
    "nanomedicine",
    "lipid-nanoparticles",
    "drug-delivery",
    "scientific-computing",
    "bioinformatics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Medical Science Apps"
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "psycopg[binary]>=3.17.0",
    "pandas>=2.1.3",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "httpx>=0.25.1",
    "scikit-learn>=1.3.2",
    "numpy>=1.26.3",
    "joblib>=1.3.2",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "isort>=5.13.2",
]

[project.urls]
Homepage = "https://expertsgroup.me"
Documentation = "https://docs.nanobio-studio.com"
Repository = "https://github.com/expertsgroup/nanobio-studio-backend"
Issues = "https://github.com/expertsgroup/nanobio-studio-backend/issues"

[tool.setuptools]
packages = ["nanobio_studio"]

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --cov=nanobio_studio --cov-report=term-missing"
asyncio_mode = "auto"

[tool.isort]
profile = "black"
line_length = 120
